# bayarea-housing-scraper

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml
bayarea_housing/: __init__.py  cli.py  filter.py  safety.py  scraper.py
examples/: basic_search.py
