[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bayarea-housing-scraper"
version = "0.1.0"
description = "Scrape Bay Area housing listings from Craigslist, SUPost, and Bay123"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "patchright>=1.0.0",
]

[project.scripts]
bayarea-housing = "bayarea_housing.cli:main"

[project.urls]
Homepage = "https://github.com/agentic-sciences/bayarea-housing-scraper"
Issues = "https://github.com/agentic-sciences/bayarea-housing-scraper/issues"
